# PeriodSplitter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Comments.txt  README.md  to_do.txt  vcpkg.json
media/: AudioGenerator.pd  audioComparison.py  audioGen.py  binaryReader.py  graph.py  sihat_viewer.py
source/: Correlator.cpp  Correlator.h  FIRFilter.cpp  FIRFilter.h  GUI.cpp  GUI.h  HarmonicTracker.cpp  HarmonicTracker.h  NoiseTracker.cpp  NoiseTracker.h  PeriodCutter.cpp  PeriodCutter.h  SihatApplication.cpp  SihatApplication.h  SitranoAnalysis.cpp  SitranoAnalysis.h  SitranoHeader.h  Splitter.cpp  Splitter.h  main.cpp
source/analysis/: HarmonicTracker.cpp  HarmonicTracker.h  NoiseTracker.cpp  NoiseTracker.h  OvertoneFinder.cpp  OvertoneFinder.h  SitranoAnalysis.cpp  SitranoAnalysis.h  TransientAnalysis.cpp  TransientAnalysis.h  TransientRecognition.cpp  TransientRecognition.h
source/configFiles/: default.json
source/dsp/: FIRFilter.h  MedianFilter.cpp  MedianFilter.h  MorletWavelet.h  PeriodCutter.cpp  PeriodCutter.h  PitchFinder.cpp  PitchFinder.h  WTransform.cpp  WTransform.h  ZPFilter.h
source/file/: JsonAdapters.h  SihatFile.h  SihatJson.h
source/gui/: ConfigEditor.h  EditorViewModel.h  GUI.h  SihatEditor.cpp  SihatEditor.h  glad.c
source/include/: InterpConfig.h  InterpHeader.h  ResynthConfig.h  ResynthHeader.h  SitranoHeader.cpp  SitranoHeader.h
source/interpolation/: AudioPlayer.cpp  AudioPlayer.h  Interpolator.cpp  Interpolator.h
source/resynthesis/: SihatResynth.cpp  SihatResynth.h
source/support/: AudioChunkStrategy.h  IWindowStrategy.h  PeriodLoopStrategy.h  SihatLogger.h  SinglePeriodStrategy.h  Splitter.cpp  Splitter.py
